#189 Web-setup not working
Try a non-encrypted url

--- a/setup/bundle.wxs
+++ b/setup/bundle.wxs
@@ -41,7 +41,7 @@
           Vital ="yes"
           SourceFile="MikTex.msi"
           Compressed="$(var.Compressed)"
-          DownloadUrl="https://github.com/Open-Systems-Pharmacology/MiKTeX/releases/download/v2.9.3/MikTex.2.9.3.msi"
+          DownloadUrl="http://github.com/Open-Systems-Pharmacology/MiKTeX/releases/download/v2.9.3/MikTex.2.9.3.msi"
         >
           <MsiProperty Name='TARGETDIR' Value='[InstallFolder]'/>
         </MsiPackage>
