--- a/setup/bundle.wxs
+++ b/setup/bundle.wxs
@@ -21,6 +21,7 @@
           SourceFile="netfx462.exe"
           DownloadUrl="http://go.microsoft.com/fwlink/?LinkId=780600"
         />    
+
         <ExePackage
           SourceFile="vc_redist.x86.exe"
           InstallCommand='/q '
@@ -29,7 +30,10 @@
           PerMachine="yes"
           Permanent="yes"          
 		      DownloadUrl="http://go.microsoft.com/fwlink/?LinkId=746571"
-        />
+        >
+          <!-- Ignore "Newer version installed" error -->
+          <ExitCode Value="1638" Behavior="success"/>
+        </ExePackage>
       
         <MsiPackage
           Id="miktex"
