--- a/setup/bundle.wxs
+++ b/setup/bundle.wxs
@@ -13,7 +13,7 @@
     <Chain>
       <ExePackage Id="netfx472" Compressed="$(var.Compressed)" PerMachine="yes" Permanent="yes" Vital="yes" InstallCommand="/q /norestart" SourceFile="netfx472.exe" DownloadUrl="https://go.microsoft.com/fwlink/?LinkID=863265" />
 
-      <ExePackage SourceFile="vc_redist.x64.exe" InstallCommand='/q ' Vital="yes" Compressed="$(var.Compressed)" PerMachine="yes" Permanent="yes" DownloadUrl="https://aka.ms/vs/16/release/vc_redist.x64.exe">
+      <ExePackage SourceFile="vc_redist.x64.exe" InstallCommand='/q /norestart' Vital="yes" Compressed="$(var.Compressed)" PerMachine="yes" Permanent="yes" DownloadUrl="https://aka.ms/vs/16/release/vc_redist.x64.exe">
         <!-- Ignore "Newer version installed" error -->
         <ExitCode Value="1638" Behavior="success"/>
       </ExePackage>
